# lab2-cards

./: start.sh
code/: CMakeLists.txt
code/interface/: CMakeLists.txt  main_interface.cpp
code/src/: CMakeLists.txt  main.cpp
code/src/card/: Card.cpp  Card.h
code/src/card-deck/: CardDeck.cpp  CardDeck.h
code/test/: CMakeLists.txt
code/test/source/: CardDeckTests.cpp  CardTests.cpp  test-main.cpp
gcov_res/: coverage.Card.cpp.66effbab53d8e7d0cedef7583a528fae.html  coverage.CardDeck.cpp.8cc34c766d84fb90f3002b584b2542e8.html  coverage.CardDeckTests.cpp.cb1c493a9aa4bb5734b343b3e759f5d1.html  coverage.CardTests.cpp.abf73fd1736243f3f8cac4dc855bbd07.html  coverage.catch_assertion_handler.hpp.212017deb194ab1193d2a0c7e4b3da7d.html  coverage.catch_decomposer.hpp.fc20c0689854ea35dcfc3b764cb77ac5.html  coverage.catch_reusable_string_stream.hpp.fa96ff7194fb8acadb04deab770393f4.html  coverage.catch_session.hpp.8e2634e3208c226e7bacc65ace926726.html  coverage.catch_source_line_info.hpp.9e391b9ca7828266cd67af79ded30ca0.html  coverage.catch_stringref.hpp.fceb91faa6c9c6b393d288f2d9427f9f.html  coverage.catch_test_registry.hpp.ff15e92edfb097a7a800246c26d36eb0.html  coverage.catch_tostring.hpp.a5d48d04a8103f1a22ad9178382ccdc3.html  coverage.catch_unique_ptr.hpp.696e3151c39d8cc27e1e2d0c4f1d01b8.html  coverage.functions.html  coverage.html  coverage.main_interface.cpp.f9d4abe42c60d7e207fb179a658bf547.html  coverage.test-main.cpp.e13873799bee1f460f61e58a8a9c3432.html  t_script.sh
